# IR-room-monitor

./: CMakeLists.txt  README.md  device_142_key.json
cppinclude/: human_object (2).hpp  human_object.hpp  tracking (2).hpp  tracking.hpp
cpplib/: human_object (2).cpp  human_object.cpp  tracking (2).cpp  tracking.cpp
evaluation/: counting_error.xlsx
include/: detect.h  feature_extraction.h  grideye_api_lv1.h  grideye_i2c.h  helper.h  image_size.h  network_common.h  sim_uart.h
lib/: detect_api.c  detect_functions.c  feature_extraction.c  feature_extraction2.c  grideye_api_lv1.c  grideye_i2c.c  helper.c  network_mqtt.c  network_wifi.c  sim_uart.c  sntp_controller.c
main/: CMakeLists.txt  macro.h  main.cpp  main.hpp
node-red-related/: calibration-flows.json
python_scripts/: manual_annotation.py  simulator_event.py
python_scripts/stored_video_sequence/: halfenter.txt  officedebug.txt  onetall.txt
tum_iotplatform_related/: consumer_119_key.json  consumer_120_key.json  device_143_key.json
