idf_component_register(SRCS "main.cpp" 
                            "../lib/network_wifi.c" 
                            "../lib/network_mqtt.c" 
                            "../lib/grideye_i2c.c" 
                            "../lib/grideye_api_lv1.c"
                            "../lib/sim_uart.c"
                            "../lib/detect_api.c"
                            "../lib/detect_functions.c"
                            "../lib/helper.c"
                            "../lib/feature_extraction.c"
                            "../lib/dht11.c"
                            "../lib/sntp_controller.c"
                            "../cpplib/human_object.cpp"
                            "../cpplib/tracking.cpp"

                        INCLUDE_DIRS "." 
                                    "../lib"
                                    "../include"
                                    "../cpplib"
                                    "../cppinclude")